llvm/test/tools/llubi/unreachable.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  unreachable
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Unreachable code.
; CHECK-NEXT: error: Execution of function 'main' failed.
